06-deploy-argocd/argo-rollouts/argo-rollouts-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  ingressClassName: nginx
  rules:
  - host: argo-rollouts.magedu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argo-rollouts-dashboard
            port:
              number: 3100
